--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,8 @@
   <string name="only_on_wifi">Only on Wi-Fi</string>
   <string name="show_thumbnails">Show thumbnails</string>
   <string name="use_detect_language">Use detected language</string>
-  <string name="for_read_aloud">Always use detected language of the article for read aloud (Android feature, available Android 10+)</string>
+  <string name="use_detect_language_not_available">This feature is only available on Android 10 and above</string>
+  <string name="description_for_read_aloud">Always use detected language of the article for read aloud (Android feature, available Android 10 and above)</string>
   <string name="may_result_data_charges">May result in mobile data charges.</string>
   <string name="only_when_charging">Only when charging</string>
   <string name="image_loading">Image loading</string>
