--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,4 +192,6 @@
 
   <string name="permission_read_desc">Allows the application to read feeds and articles</string>
   <string name="permission_read_label">Feeder read-only access</string>
+
+  <string name="explanation_permission_notifications">Permission must be granted before notifications can be enabled.</string>
 </resources>
