--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -180,6 +180,6 @@
     <string name="permission_read_label">Akses Feeder hanya-baca</string>
     <string name="description_for_read_aloud">Secara otomatis mendeteksi bahasa artikel</string>
     <string name="use_detect_language">Deteksi bahasa</string>
-    <string name="use_detect_language_not_available">Hanya tersedia pada Android 10 dan terbaru</string>
+    <string name="only_available_on_android_n">Hanya tersedia pada Android %1$s dan terbaru</string>
     <string name="explanation_permission_notifications">Perizinan harus diberikan sebelum notifikasi diaktifkan.</string>
 </resources>
