--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -180,6 +180,6 @@
     <string name="permission_read_label">Доступ лише для читання для Feeder</string>
     <string name="use_detect_language">Визначити мову</string>
     <string name="description_for_read_aloud">Автоматично визначати мову статті</string>
-    <string name="use_detect_language_not_available">Можливо лише на Android 10 і вище</string>
+    <string name="only_available_on_android_n">Можливо лише на Android %1$s і вище</string>
     <string name="explanation_permission_notifications">Дозвіл має бути наданий перед увімкненням сповіщень.</string>
 </resources>
