--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -180,6 +180,6 @@
     <string name="permission_read_desc">允许应用读取源和文章</string>
     <string name="use_detect_language">检测语言</string>
     <string name="description_for_read_aloud">自动检测文章语言</string>
-    <string name="use_detect_language_not_available">仅在 Android 10 及以上系统版本可用</string>
+    <string name="only_available_on_android_n">仅在 Android %1$s 及以上系统版本可用</string>
     <string name="explanation_permission_notifications">必须先授予权限才能启用通知。</string>
 </resources>
