--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,8 +188,11 @@
   <string name="no_barcode_scanner_installed">Could not find a barcode scanner</string>
   <string name="pin_article">Pin article</string>
   <string name="unpin_article">Unpin article</string>
+  <string name="pinned">Pinned</string>
   <string name="bookmark_article">Bookmark article</string>
   <string name="remove_bookmark">Remove bookmark</string>
+  <string name="bookmarked">Bookmarked</string>
+  <string name="new_indicator">New</string>
 
   <string name="permission_read_desc">Allows the application to read feeds and articles</string>
   <string name="permission_read_label">Feeder read-only access</string>
