--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
   <string name="resume_reading">Resume reading</string>
   <string name="stop_reading">Stop reading</string>
   <string name="skip_to_next">Skip to next</string>
+  <string name="set_language">Set language</string>
   <string name="sync">Sync</string>
   <string name="export_feeds_to_opml">Export feeds to OPML</string>
   <string name="import_feeds_from_opml">Import feeds from OPML</string>
