--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
   <string name="open_enclosed_media">Open enclosed media</string>
   <string name="open_enclosed_media_file">Open %1$s</string>
   <string name="read_article">Read aloud</string>
+  <string name="text_to_speech">Text to speech</string>
   <string name="pause_reading">Pause reading</string>
   <string name="resume_reading">Resume reading</string>
   <string name="stop_reading">Stop reading</string>
