Fixed images rendering too large causing crashes
Upgraded dependencies

Managed devices - upgraded coil

Android test in gitlab

Multi previews

Fixes #583

Updated to AsyncImage which should improve scrolling performance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,4 +201,5 @@
   <string name="permission_read_label">Feeder read-only access</string>
 
   <string name="explanation_permission_notifications">Permission must be granted before notifications can be enabled.</string>
+    <string name="article_image">Article image</string>
 </resources>
