--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,5 +201,6 @@
   <string name="permission_read_label">Feeder read-only access</string>
 
   <string name="explanation_permission_notifications">Permission must be granted before notifications can be enabled.</string>
-    <string name="article_image">Article image</string>
+  <string name="article_image">Article image</string>
+  <string name="feed_icon">Feed Icon</string>
 </resources>
