--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -172,12 +172,7 @@
     <string name="remove">Ta bort</string>
   <string name="permission_read_desc">Tillåter appen att läsa flöden och artiklar</string>
     <string name="permission_read_label">Feeder skrivskyddad åtkomst</string>
-    <string name="showing_only_bookmarked_articles">Visar endast bokmärkta artiklar</string>
-    <string name="bookmarks_filter">Bokmärken endast</string>
-    <string name="bookmark_article">Bokmärk artikel</string>
-    <string name="remove_bookmark">Ta bort bokmärke</string>
-    <string name="bookmarked">Bokmärkad</string>
-    <string name="new_indicator">Ny</string>
+  <string name="new_indicator">Ny</string>
     <string name="explanation_permission_notifications">Innan notiser kan aktiveras måste de tillåtas.</string>
     <string name="dynamic_theme_use">Dynamiska färger</string>
     <string name="use_detect_language">Identifiera språk</string>
@@ -191,4 +186,7 @@
     <string name="text_scale">Textstorlek</string>
     <string name="block_list_description">Dölj artiklar med titlar som matchar någon av filterna. Exempelfilter:</string>
     <string name="sync_to_fetch">Synkronisera för att hämta artikel</string>
+  <string name="saved_articles">Sparade artiklar</string>
+  <string name="save_article">Spara artikel</string>
+  <string name="unsave_article">Sluta spara artikel</string>
 </resources>
