Added option to mark as read while scrolling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,4 +203,5 @@
   <string name="saved_article">Saved article</string>
   <string name="save_article">Save article</string>
   <string name="unsave_article">Stop saving article</string>
+  <string name="mark_as_read_on_scroll">Mark as read on scroll</string>
 </resources>
