--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -167,10 +167,10 @@
     <string name="device_sync_description_2">Du skal blot scanne koden fra din synkroniseringskæde, som du har oprettet på en anden enhed, eller start en ny synkroniseringskæde.</string>
     <string name="are_you_sure_leave_sync_chain">Er du sikker på, at du vil forlade synkroniseringskæden\?</string>
     <string name="no_barcode_scanner_installed">Kunne ikke finde en stregkodescanner</string>
-  <string name="block_list">Blokeringsliste</string>
+    <string name="block_list">Blokeringsliste</string>
     <string name="add_item">Tilføj emne</string>
     <string name="remove">Fjern</string>
-  <string name="permission_read_label">Feeder skrivebeskyttet adgang</string>
+    <string name="permission_read_label">Feeder skrivebeskyttet adgang</string>
     <string name="permission_read_desc">Gør det muligt for applikationen at læse feeds og artikler</string>
     <string name="use_detect_language">Registrer sprog</string>
     <string name="description_for_read_aloud">Registrerer artiklens sprog automatisk</string>
@@ -180,10 +180,14 @@
     <string name="skip_to_next">Spring til næste</string>
     <string name="set_language">Indstil sprog</string>
     <string name="dynamic_theme_use">Dynamiske farver</string>
-  <string name="new_indicator">Ny</string>
+    <string name="new_indicator">Ny</string>
     <string name="article_image">Artikelbillede</string>
     <string name="feed_icon">Feed-ikon</string>
     <string name="text_scale">Tekstskalering</string>
     <string name="block_list_description">Skjuler artikler med titler, der indeholder nogen af disse filtre. Eksempel på filtre:</string>
     <string name="sync_to_fetch">Synkroniser for at hente artikel</string>
+    <string name="saved_articles">Gemte artikler</string>
+    <string name="unsave_article">Stop med at gemme artikel</string>
+    <string name="saved_article">Gemt artikel</string>
+    <string name="save_article">Gem artikel</string>
 </resources>
