--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -167,23 +167,27 @@
     <string name="only_from_end">Solo dalla fine</string>
     <string name="no_barcode_scanner_installed">Impossibile trovare uno scanner di codici a barre</string>
     <string name="are_you_sure_leave_sync_chain">Sei sicuro/a di voler lasciare la catena di sincronizzazione\?</string>
-  <string name="remove">Rimuovi</string>
+    <string name="remove">Rimuovi</string>
     <string name="add_item">Aggiungi un elemento</string>
     <string name="block_list">Lista di blocco</string>
     <string name="permission_read_desc">Consente all\'applicazione di leggere feed e articoli</string>
-  <string name="permission_read_label">Accesso in sola lettura Feeder</string>
-  <string name="only_available_on_android_n">Disponibile solo su Android %1$s e versioni successive</string>
+    <string name="permission_read_label">Accesso in sola lettura Feeder</string>
+    <string name="only_available_on_android_n">Disponibile solo su Android %1$s e versioni successive</string>
     <string name="description_for_read_aloud">Rileva automaticamente la lingua dell\'articolo</string>
     <string name="use_detect_language">Rileva la lingua</string>
     <string name="explanation_permission_notifications">L\'autorizzazione deve essere concessa prima di poter attivare le notifiche.</string>
     <string name="skip_to_next">Passa al prossimo</string>
     <string name="set_language">Imposta la lingua</string>
     <string name="text_to_speech">Sintesi vocale</string>
-  <string name="new_indicator">Nuovo</string>
+    <string name="new_indicator">Nuovo</string>
     <string name="dynamic_theme_use">Colori dinamici</string>
     <string name="article_image">Immagine dell\'articolo</string>
     <string name="feed_icon">Icona del feed</string>
     <string name="text_scale">Scala del testo</string>
     <string name="block_list_description">Nasconde gli articoli con titoli contenenti uno qualsiasi di questi filtri. Filtri di esempio:</string>
     <string name="sync_to_fetch">Sincronizza per recuperare l\'articolo</string>
+    <string name="saved_articles">Articoli salvati</string>
+    <string name="saved_article">Articolo salvato</string>
+    <string name="save_article">Salva l\'articolo</string>
+    <string name="unsave_article">Smetti di salvare l\'articolo</string>
 </resources>
