Updated Czech translation using Weblate
Currently translated at 100.0% (191 of 191 strings)

Co-authored-by: pchelium <pchelium@seznam.cz>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/cs/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -190,4 +190,5 @@
     <string name="saved_article">Uložený článek</string>
     <string name="save_article">Uložit článek</string>
     <string name="unsave_article">Přestat ukládat článek</string>
+    <string name="mark_as_read_on_scroll">Označit jako přečtené při posouvání</string>
 </resources>
