Updated Spanish translation using Weblate
Currently translated at 100.0% (191 of 191 strings)

Co-authored-by: El Pirujo <boina@disroot.org>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/es/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -190,4 +190,5 @@
     <string name="unsave_article">Dejar de guardar artículo</string>
     <string name="saved_articles">Artículos guardados</string>
     <string name="saved_article">Artículo guardado</string>
+    <string name="mark_as_read_on_scroll">Marcar como leído al desplazar</string>
 </resources>
