Updated Danish translation using Weblate
Currently translated at 100.0% (191 of 191 strings)

Co-authored-by: ERYpTION <eryption.x6tf8@simplelogin.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/da/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -190,4 +190,5 @@
     <string name="unsave_article">Stop med at gemme artikel</string>
     <string name="saved_article">Gemt artikel</string>
     <string name="save_article">Gem artikel</string>
+    <string name="mark_as_read_on_scroll">Markér som læst, når der scrolles</string>
 </resources>
