Updated Ukrainian translation using Weblate
Currently translated at 100.0% (191 of 191 strings)

Co-authored-by: Dan <jonweblin2205@protonmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/uk/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -190,4 +190,5 @@
     <string name="saved_article">Збережена стаття</string>
     <string name="save_article">Зберегти статтю</string>
     <string name="unsave_article">Зупинити збереження статті</string>
+    <string name="mark_as_read_on_scroll">Позначити як прочитане під час прокручування</string>
 </resources>
