Updated Italian translation using Weblate
Currently translated at 100.0% (191 of 191 strings)

Co-authored-by: Nicola Masarone <nick67.android@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/it/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -190,4 +190,5 @@
     <string name="saved_article">Articolo salvato</string>
     <string name="save_article">Salva l\'articolo</string>
     <string name="unsave_article">Smetti di salvare l\'articolo</string>
+    <string name="mark_as_read_on_scroll">Segna come letto quando scorri</string>
 </resources>
