--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -167,16 +167,16 @@
     <string name="only_from_end">Alleen vanaf het einde</string>
     <string name="are_you_sure_leave_sync_chain">Sync-keten inderdaad verlaten\?</string>
     <string name="no_barcode_scanner_installed">Geen barcodescanner gevonden</string>
-  <string name="add_item">Item toevoegen</string>
+    <string name="add_item">Item toevoegen</string>
     <string name="remove">Verwijderen</string>
     <string name="block_list">Lijst blokkeren</string>
-  <string name="permission_read_desc">Hiermee kan de toepassing feeds en artikelen lezen</string>
+    <string name="permission_read_desc">Hiermee kan de toepassing feeds en artikelen lezen</string>
     <string name="permission_read_label">Feeder alleen-lezen toegang</string>
     <string name="use_detect_language">Taal detecteren</string>
     <string name="article_image">Beeld van het artikel</string>
     <string name="block_list_description">Verbergt artikels met titels die een van deze filters bevatten. Voorbeeld filters:</string>
     <string name="dynamic_theme_use">Dynamische kleuren</string>
-  <string name="new_indicator">Nieuw</string>
+    <string name="new_indicator">Nieuw</string>
     <string name="explanation_permission_notifications">Toestemming moet worden verleend voordat meldingen kunnen worden ingeschakeld.</string>
     <string name="feed_icon">Feed Icoon</string>
     <string name="text_to_speech">Tekst-naar-spraak</string>
@@ -186,4 +186,9 @@
     <string name="description_for_read_aloud">Detecteert automatisch de taal van het artikel</string>
     <string name="text_scale">Tekstschaal</string>
     <string name="sync_to_fetch">Synchroniseren om een artikel op te halen</string>
+    <string name="save_article">Artikel opslaan</string>
+    <string name="saved_articles">Opgeslagen artikelen</string>
+    <string name="saved_article">Opgeslagen artikel</string>
+    <string name="unsave_article">Stop met opslaan artikel</string>
+    <string name="mark_as_read_on_scroll">Als gelezen markeren bij scrollen</string>
 </resources>
