Updated French translation using Weblate
Currently translated at 100.0% (191 of 191 strings)

Co-authored-by: J. Lavoie <j.lavoie@net-c.ca>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/fr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -190,4 +190,5 @@
     <string name="unsave_article">Ne plus sauvegarder l\'article</string>
     <string name="saved_article">Article sauvegardé</string>
     <string name="save_article">Sauvegarder l\'article</string>
+    <string name="mark_as_read_on_scroll">Marquer comme lu en défilant</string>
 </resources>
