Updated Basque translation using Weblate
Currently translated at 100.0% (191 of 191 strings)

Co-authored-by: Aitor Salaberria <trslbrr@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/eu/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -129,9 +129,9 @@
     <string name="unread">Irakurri gabeak</string>
     <string name="already_read">Jada irakurriak</string>
     <string name="showing_only_unread_articles">Irakurri gabeko artikuluak soilik erakusten</string>
-  <string name="showing_all_articles">Artikulu guztiak erakusten</string>
+    <string name="showing_all_articles">Artikulu guztiak erakusten</string>
     <string name="synchronize_feeds">Jarioak sinkronizatu</string>
-  <string name="zero_unread_articles">Irakurri gabeko %1$s artikulu</string>
+    <string name="zero_unread_articles">Irakurri gabeko %1$s artikulu</string>
     <string name="one_unread_article">Irakurri gabeko artikulu %1$s</string>
     <string name="two_unread_articles">Irakurri gabeko %1$s artikulu</string>
     <string name="few_unread_articles">Irakurri gabeko %1$s artikulu</string>
@@ -176,14 +176,19 @@
     <string name="from_anywhere">Edozein lekutik</string>
     <string name="sync_code">Sinkronizazio-kodea</string>
     <string name="secret_key">Gako pribatua</string>
-  <string name="new_indicator">Berria</string>
-  <string name="permission_read_desc">Artikuluak eta jarioak aplikazioari irakurtzea baimentzen du</string>
+    <string name="new_indicator">Berria</string>
+    <string name="permission_read_desc">Artikuluak eta jarioak aplikazioari irakurtzea baimentzen du</string>
     <string name="permission_read_label">Sarrera soilik irakurketarako</string>
     <string name="explanation_permission_notifications">Jakinarazpenak aktibatu ahal izateko lehenik baimena eman behar da.</string>
     <string name="article_image">Artikuluaren irudia</string>
     <string name="feed_icon">Jarioaren ikonoa</string>
     <string name="are_you_sure_leave_sync_chain">Ziur al zaude sinkronizazio-katetik irten nahi duzula\?</string>
     <string name="no_barcode_scanner_installed">Ezin izan da barra-kode eskaneatzailerik aurkitu</string>
-  <string name="text_scale">Testuaren eskala</string>
+    <string name="text_scale">Testuaren eskala</string>
     <string name="sync_to_fetch">Sinkronizatu artikuluak eskuratzeko</string>
+    <string name="mark_as_read_on_scroll">Irakurritako gisa ezarri korritzean</string>
+    <string name="saved_articles">Gordetako artikuluak</string>
+    <string name="saved_article">Gordetako artikulua</string>
+    <string name="save_article">Gorde artikulua</string>
+    <string name="unsave_article">Utzi artikulua gordetzeari</string>
 </resources>
