--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -12,9 +12,9 @@
     <string name="open_in_web_view">Відкрити у Вебперегляді</string>
     <string name="open_link_in_web_view">Відкрити ланку у вебперегляді</string>
     <string name="use_app_default">Викор. типову програму</string>
-    <string name="notification_channel_description">Сповіщення показуватимуться лише для непрочитаних записів налаштованих стрічок</string>
-    <string name="notification_channel_name">Непрочитані стрічки</string>
-    <string name="updated_feeds">Оновлені стрічки</string>
+    <string name="notification_channel_description">Сповіщення показуватимуться лише для непрочитаних записів налаштованих каналів</string>
+    <string name="notification_channel_name">Непрочитані канали</string>
+    <string name="updated_feeds">Оновлені канали</string>
     <string name="include_mobile_hotspots">Враховувати мобільні точки доступу</string>
     <string name="show_fab">Показувати плавучу кнопку дії</string>
     <string name="no_activity_for_link">Установіть щось для відкривання цієї ланки</string>
@@ -23,7 +23,7 @@
     <string name="show_thumbnails">Показувати мініатюри</string>
     <string name="only_on_wifi">Лише через Wi-Fi</string>
     <string name="nothing_to_display">Нема що відображати!</string>
-    <string name="no_such_feed">Не знайдено таких стрічок. Спробуйте змінити на HTTPS, можливо\?</string>
+    <string name="no_such_feed">Такого каналу знайти не вдалося. Можливо, ви використовуєте HTTPS\?</string>
     <string name="indicator_for_mark_as_read">Індикатор позначення прочитаним</string>
     <string name="new_based_on_this">Нове на основі цього</string>
     <string name="sync">Синхронізувати</string>
@@ -50,7 +50,7 @@
     <string name="few_unread_articles">%1$s непрочитаних статей</string>
     <string name="two_unread_articles">%1$s непрочитані статті</string>
     <string name="one_unread_article">%1$s непрочитана стаття</string>
-    <string name="synchronize_feeds">Синхронізувати стрічки</string>
+    <string name="synchronize_feeds">Синхронізувати канали</string>
     <string name="already_read">Прочитане</string>
     <string name="unread">Непрочитане</string>
     <string name="go_to_feed">Перейти до %1$s</string>
@@ -63,10 +63,10 @@
     <string name="battery_optimization">Оптимізування батареї</string>
     <string name="contracted_tag">Закрита мітка</string>
     <string name="expanded_tag">Відкрити мітку</string>
-    <string name="discovered_feeds_list">Список виявлених стрічок</string>
+    <string name="discovered_feeds_list">Список виявлених каналів</string>
     <string name="mark_items_below_as_read">Позначити нижче прочитаним</string>
     <string name="mark_items_above_as_read">Позначити вище прочитаним</string>
-    <string name="open_feed">Відкрити стрічку</string>
+    <string name="open_feed">Відкрити канал</string>
     <string name="javascript">JavaScript</string>
     <string name="touch_to_play_video">Натисніть, щоб відтворити відео</string>
     <string name="no_email_client">Не можливо відкрити клієнт ел. пошти</string>
@@ -80,7 +80,7 @@
     <string name="theme_automatic">Автоматична</string>
     <string name="theme_system">Системна</string>
     <string name="could_not_load_url">Не можливо завантажити URL</string>
-    <string name="max_feed_items">Найбільше записів на стрічку</string>
+    <string name="max_feed_items">Найбільше записів на канал</string>
     <string name="reader_settings">Читання</string>
     <string name="open_links_with">Відкривати ланки через</string>
     <string name="open_item_by_default_with">Типово відкривати записи через</string>
@@ -100,30 +100,30 @@
     <string name="sync_option_every_30min">Що 30 хвилин</string>
     <string name="sync_option_every_15min">Що 15 хвилин</string>
     <string name="sync_option_manually">Вручну</string>
-    <string name="all_feeds">Усі стрічки</string>
+    <string name="all_feeds">Всі канали</string>
     <string name="title_activity_settings">Налаштування</string>
     <string name="share">Поширити</string>
     <string name="view_debug_log">Переглянути журнал зневадження</string>
-    <string name="import_feeds_from_opml">Імпорт. з OPML</string>
-    <string name="export_feeds_to_opml">Експорт. в OPML</string>
+    <string name="import_feeds_from_opml">Імпортувати канали з OPML</string>
+    <string name="export_feeds_to_opml">Експортувати канали в OPML</string>
     <string name="open_enclosed_media_file">Відкрити %1$s</string>
     <string name="open_in_browser">Відкрити в оглядачі</string>
     <string name="new_items_available">Доступні нові записи</string>
     <string name="show_unread_items">Показати непрочитані записи</string>
     <string name="show_all_items">Показати всі записи</string>
-    <string name="delete_feed">Видалити стрічку</string>
-    <string name="edit_feed">Змінити стрічку</string>
-    <string name="search_feed_empty_hint">Уведіть адресу стрічки</string>
-    <string name="empty_feed_add"><annotation style="link">Додати</annotation> більше стрічок\?</string>
-    <string name="empty_feed_open"><annotation style="link">Відкрити</annotation> іншу стрічку\?</string>
+    <string name="delete_feed">Видалити канал</string>
+    <string name="edit_feed">Змінити канал</string>
+    <string name="search_feed_empty_hint">Введіть адресу каналу</string>
+    <string name="empty_feed_add"><annotation style="link">Додати</annotation> більше каналів\?</string>
+    <string name="empty_feed_open"><annotation style="link">Відкрити</annotation> інший канал\?</string>
     <string name="save">Зберегти</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
-    <string name="add_feed_search_hint">URL-адреса стрічки</string>
+    <string name="add_feed_search_hint">URL-адреса каналу</string>
     <string name="tag">Мітка</string>
     <string name="url">URL-адреса</string>
-    <string name="title_activity_edit_feed">Підписатися на стрічку</string>
-    <string name="add_feed">Додати стрічку</string>
+    <string name="title_activity_edit_feed">Підписатися на канал</string>
+    <string name="add_feed">Додати канал</string>
     <string name="action_settings">Параметри</string>
     <string name="feed_item_style_super_compact">Дуже компактний</string>
     <string name="feed_item_style_compact">Компактний</string>
@@ -133,7 +133,7 @@
     <string name="dark_theme_preference">Бажана темна тема</string>
     <string name="dark_theme_preference_dark">Темна</string>
     <string name="generate_extra_unique_ids">Створити додаткові унікальні ІД</string>
-    <string name="only_enable_for_bad_id_feeds">Дозволити лише для стрічок із поганими ІД</string>
+    <string name="only_enable_for_bad_id_feeds">Дозволити лише для каналів із поганими ID</string>
     <string name="syncing">Синхронування</string>
     <string name="sync_status">Стан синхронізації</string>
     <string name="invalid_url">Не правильна URL</string>
@@ -146,7 +146,7 @@
     <string name="qr_code">QR-код</string>
     <string name="press_scan_sync">Перейдіть на своєму пристрої до синхронізованих пристроїв і натисніть сканувати код синхронізації.</string>
     <string name="feeder_device_sync_code">Код синхронізації пристрою Feeder</string>
-    <string name="device_sync_description_1">Синхронізування пристрою дозволяє синхронізувати підписані стрічки і читати статті між різними пристроями.</string>
+    <string name="device_sync_description_1">Синхронізування пристрою дозволяє синхронізувати підписані канали і читати статті між різними пристроями.</string>
     <string name="scan_or_enter_code">Відскануйте або введіть код синхронізації</string>
     <string name="sync_code">Код синхронізації</string>
     <string name="secret_key">Секретний ключ</string>
@@ -170,8 +170,8 @@
     <string name="block_list">Список блокування</string>
     <string name="add_item">Додати елемент</string>
     <string name="remove">Вилучити</string>
-    <string name="permission_read_desc">Дозволяє програмі читати стрічки і статті</string>
-    <string name="permission_read_label">Доступ лише для читання для Feeder</string>
+    <string name="permission_read_desc">Дозволяє застосунку читати канали і статті</string>
+    <string name="permission_read_label">Доступ лише для читання Feeder</string>
     <string name="use_detect_language">Визначити мову</string>
     <string name="description_for_read_aloud">Автоматично визначати мову статті</string>
     <string name="only_available_on_android_n">Працює лише на Android %1$s і вище</string>
@@ -182,7 +182,7 @@
     <string name="dynamic_theme_use">Динамічні кольори</string>
     <string name="new_indicator">Нове</string>
     <string name="article_image">Зображення статті</string>
-    <string name="feed_icon">Значок стрічки</string>
+    <string name="feed_icon">Значок каналу</string>
     <string name="text_scale">Розмір тексту</string>
     <string name="block_list_description">Приховує статті з назвами, які містять будь-який із цих фільтрів. Приклад фільтрів:</string>
     <string name="sync_to_fetch">Синхронізувати, щоб отримати статтю</string>
@@ -191,4 +191,18 @@
     <string name="save_article">Зберегти статтю</string>
     <string name="unsave_article">Зупинити збереження статті</string>
     <string name="mark_as_read_on_scroll">Позначити як прочитане під час прокручування</string>
+    <string name="one_feed">%1$s канал</string>
+    <string name="import_x_feeds_with_y_tags">Імпорт %1$s з %2$s\?</string>
+    <string name="zero_tags">%1$s тегів</string>
+    <string name="one_tags">%1$s тег</string>
+    <string name="many_tags">%1$s тегів</string>
+    <string name="few_tags">%1$s тегів</string>
+    <string name="no_feeds">Немає каналів</string>
+    <string name="zero_feeds">%1$s каналів</string>
+    <string name="other_feeds">%1$s каналів</string>
+    <string name="other_tags">%1$s тегів</string>
+    <string name="two_feeds">%1$s канали</string>
+    <string name="few_feeds">%1$s каналів</string>
+    <string name="many_feeds">%1$s каналів</string>
+    <string name="two_tags">%1$s теги</string>
 </resources>
