--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -191,4 +191,18 @@
     <string name="save_article">Artikel speichern</string>
     <string name="unsave_article">Artikel nicht mehr speichern</string>
     <string name="mark_as_read_on_scroll">Beim Scrollen als gelesen markieren</string>
+    <string name="no_feeds">Keine Feeds</string>
+    <string name="zero_feeds">%1$s Feeds</string>
+    <string name="one_feed">%1$s Feed</string>
+    <string name="two_feeds">%1$s Feeds</string>
+    <string name="few_feeds">%1$s Feeds</string>
+    <string name="many_feeds">%1$s Feeds</string>
+    <string name="other_feeds">%1$s Feeds</string>
+    <string name="one_tags">%1$s Tag</string>
+    <string name="zero_tags">%1$s Tags</string>
+    <string name="two_tags">%1$s Tags</string>
+    <string name="few_tags">%1$s Tags</string>
+    <string name="many_tags">%1$s Tags</string>
+    <string name="other_tags">%1$s Tags</string>
+    <string name="import_x_feeds_with_y_tags">%1$s mit %2$s importieren\?</string>
 </resources>
