Updated Swedish translation using Weblate
Currently translated at 100.0% (205 of 205 strings)

Co-authored-by: Jonas Kalderstam <jonas@cowboyprogrammer.org>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/sv/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -170,9 +170,9 @@
     <string name="block_list">Blocklista</string>
     <string name="add_item">Lägg till</string>
     <string name="remove">Ta bort</string>
-  <string name="permission_read_desc">Tillåter appen att läsa flöden och artiklar</string>
+    <string name="permission_read_desc">Tillåter appen att läsa flöden och artiklar</string>
     <string name="permission_read_label">Feeder skrivskyddad åtkomst</string>
-  <string name="new_indicator">Ny</string>
+    <string name="new_indicator">Ny</string>
     <string name="explanation_permission_notifications">Innan notiser kan aktiveras måste de tillåtas.</string>
     <string name="dynamic_theme_use">Dynamiska färger</string>
     <string name="use_detect_language">Identifiera språk</string>
@@ -186,7 +186,23 @@
     <string name="text_scale">Textstorlek</string>
     <string name="block_list_description">Dölj artiklar med titlar som matchar någon av filterna. Exempelfilter:</string>
     <string name="sync_to_fetch">Synkronisera för att hämta artikel</string>
-  <string name="saved_articles">Sparade artiklar</string>
-  <string name="save_article">Spara artikel</string>
-  <string name="unsave_article">Sluta spara artikel</string>
+    <string name="saved_articles">Sparade artiklar</string>
+    <string name="save_article">Spara artikel</string>
+    <string name="unsave_article">Sluta spara artikel</string>
+    <string name="no_feeds">Inga flöden</string>
+    <string name="zero_feeds">%1$s flöden</string>
+    <string name="one_feed">%1$s flöde</string>
+    <string name="two_feeds">%1$s flöden</string>
+    <string name="few_feeds">%1$s flöden</string>
+    <string name="many_feeds">%1$s flöden</string>
+    <string name="other_feeds">%1$s flöden</string>
+    <string name="import_x_feeds_with_y_tags">Importera %1$s med %2$s\?</string>
+    <string name="two_tags">%1$s taggar</string>
+    <string name="few_tags">%1$s taggar</string>
+    <string name="many_tags">%1$s taggar</string>
+    <string name="other_tags">%1$s taggar</string>
+    <string name="zero_tags">%1$s taggar</string>
+    <string name="one_tags">%1$s tagg</string>
+    <string name="mark_as_read_on_scroll">Markera som läst vid skrollning</string>
+    <string name="saved_article">Sparad artikel</string>
 </resources>
